# Mahjong_AI_with_Claude

./: .gitignore  AIとの連携.md  CLAUDE.md  README.md  main.py  pyproject.toml  run_all_tests.py  run_tests.py  test_kan_functionality.py  test_optional_win.py
docs/claude/: phase1.md  phase1_final_implementation_report.md  phase1_implementation_report.md  phase1_post_implementation_updates.md  開発仕様書.md
scripts/: dev.py  test_simple.py
src/mahjong_ai/: __init__.py
src/mahjong_ai/game/: __init__.py  game_engine.py  wall_tiles.py
src/mahjong_ai/interface/: __init__.py  cui_interface.py
src/mahjong_ai/logic/: __init__.py  shanten_calculator.py  winning_checker.py
src/mahjong_ai/models/: __init__.py  hand.py  tile.py
src/mahjong_ai/utils/: __init__.py  logger.py
tests/: __init__.py  test_cui_interface.py  test_environment.py  test_game_engine.py  test_hand.py  test_shanten_calculator.py  test_tile.py  test_wall_tiles.py  test_winning_checker.py
