[tool.poetry]
name = "mahjong-ai-with-claude"
version = "0.1.0"
description = "段階的な開発手法を用いて、最終的に人間と対戦可能な麻雀AIを作成するプロジェクト"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "mahjong_ai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# Phase 2以降で使用予定
flask = { version = "^3.0.0", optional = true }
flask-cors = { version = "^4.0.0", optional = true }
flask-restful = { version = "^0.3.10", optional = true }
sqlalchemy = { version = "^2.0.0", optional = true }
flask-sqlalchemy = { version = "^3.1.0", optional = true }
alembic = { version = "^1.13.0", optional = true }
marshmallow = { version = "^3.20.0", optional = true }
numpy = { version = "^1.26.0", optional = true }
python-dotenv = { version = "^1.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.poetry.extras]
web = ["flask", "flask-cors", "flask-restful", "sqlalchemy", "flask-sqlalchemy", "alembic", "marshmallow", "numpy", "python-dotenv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src/mahjong_ai --cov-report=html --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info"
]